--- a/wiki/%E3%81%93%E3%81%86.wikitext
+++ b/wiki/%E3%81%93%E3%81%86.wikitext
@@ -24,12 +24,12 @@
 # [[功]]: [[efficiency]], [[merit]], [[distinguished]] [[service]]s, [[achievement]], [[success]], [[exploit]], [[honor]], [[credit]]
 # [[光]]: [[light]], [[ray]], [[beam]]; [[radiance]], [[brilliance]], [[brightness]]; [[shine]], [[flash]], [[gleam]], [[glitter]], [[glimmer]], [[twinkle]], [[sparkle]], [[glow]], [[luster]], [[gloss]]
 # [[江]]: [[river]], [[creek]]; [[inlet]], [[bay]]
-# [[香]]: [[incense]]
-# [[校]]: (''prefix'') [[school]]
+# [[香]]: [[fragrant]], sweet [[smelling]]; [[incense]]
+# [[校]]: (''prefix'') [[school]]; military [[field officer]
 # [[項]]: [[section]], [[member]], [[term]]
-# [[鉱]]:
-# [[綱]]: (''biology'') [[class]]
-# [[稿]]:
-# [[鋼]]: [[steel]]
-# [[衡]]:
-# [[購]]:
+# [[鉱]]: [[mine]]; [[mineral]], [[ore]]
+# [[綱]]: heavy [[rope]], [[hawser]]; main [[points]]; ''(biological classification)'' [[class]]
+# [[稿]]: [[draft]], [[manuscript]], [[rough copy]]
+# [[鋼]]: [[steel]]; [[hard]], [[strong]], [[tough]]
+# [[衡]]: [[measure]], [[weigh]], [[judge]], [[consider]]
+# [[購]]: [[buy]], [[purchase]]; [[hire]]
