--- a/wiki/%E3%81%93%E3%81%86.wikitext
+++ b/wiki/%E3%81%93%E3%81%86.wikitext
@@ -25,7 +25,7 @@
 # [[光]]: [[light]], [[ray]], [[beam]]; [[radiance]], [[brilliance]], [[brightness]]; [[shine]], [[flash]], [[gleam]], [[glitter]], [[glimmer]], [[twinkle]], [[sparkle]], [[glow]], [[luster]], [[gloss]]
 # [[江]]: [[river]], [[creek]]; [[inlet]], [[bay]]
 # [[香]]: [[fragrant]], sweet [[smelling]]; [[incense]]
-# [[校]]: (''prefix'') [[school]]; military [[field officer]
+# [[校]]: (''prefix'') [[school]]; military [[field officer]]
 # [[項]]: [[section]], [[member]], [[term]]
 # [[鉱]]: [[mine]]; [[mineral]], [[ore]]
 # [[綱]]: heavy [[rope]], [[hawser]]; main [[points]]; ''(biological classification)'' [[class]]
