--- a/wiki/%E3%81%93%E3%81%86.wikitext
+++ b/wiki/%E3%81%93%E3%81%86.wikitext
@@ -28,8 +28,8 @@
 # [[校]]: (''prefix'') [[school]]; military [[field officer]]
 # [[項]]: [[section]], [[member]], [[term]]
 # [[鉱]]: [[mine]]; [[mineral]], [[ore]]
-# [[綱]]: heavy [[rope]], [[hawser]]; main [[points]]; ''(biological classification)'' [[class]]
-# [[稿]]: [[draft]], [[manuscript]], [[rough copy]]
+# [[綱]]: heavy [[rope]], [[hawser]]; main [[point]]s; ''(biological classification)'' [[class]]
+# [[稿]]: [[draft]], [[manuscript]], rough [[copy]]
 # [[鋼]]: [[steel]]; [[hard]], [[strong]], [[tough]]
 # [[衡]]: [[measure]], [[weigh]], [[judge]], [[consider]]
 # [[購]]: [[buy]], [[purchase]]; [[hire]]
