--- a/wiki/please.wikitext
+++ b/wiki/please.wikitext
@@ -34,9 +34,12 @@
 #A word that is used to make commands more polite.  It is the shortened form of "if it would please you to do so", which was then collapsed to "[[if you please]]" and finally to just "please".
 
 ====Translations====
+*Chinese: [[请]]
 *{{cs}}: [[prosím]]
 *{{fj}}: [[yalo vinaka]]
-*German: [[bitte]]  
+*French: [[s'il vous plaît]], [[S.V.P.]]
+*German: [[bitte]]
+*Italian: [[per favore]]
 *{{ja}}: [[お願い]] (onegai)
 *{{no}}: [[vær så snill]], [[takk]] (?)
 *{{pl}}: [[proszę]]
