Re-wrote definition, +rel, +see, fmt <polyamory#66714>

--- a/wiki/polyamory.wikitext
+++ b/wiki/polyamory.wikitext
@@ -1,6 +1,19 @@
-{{rfd}}
-The practice, state or ability of having more than one sexual loving relationship at the same time, with the full knowledge and consent of all partners involved.
+==English==
 
-Word and definition coinage are attributed to Morning Glory Zell Ravenheart.
-http://www.polyfamilies.com/poly101.html
-http://www.caw.org/articles/bouquet.html
+===Noun===
+'''polyamory'''
+
+# Any of various practices involving relationships with multiple partners, generally with the knowledge and consent of all involved.
+
+===Related Terms===
+*[[polyamorous]]
+
+===See Also===
+
+*[[monogamy]]
+*[[polyandry]]
+*[[polygamy]]
+*[[polygyny]]
+
+*[http://www.polyamory.org The alt.polyamory home page]
+*[http://www.poly-nyc.com/definitions.html A discusson of various senses of the term]
