--- a/wiki/lamb.wikitext
+++ b/wiki/lamb.wikitext
@@ -17,7 +17,7 @@
 *Dutch: [[lam]] ''n'', [[lammetje]] ''n'', [[lamsvlees]] ''n''
 *Finnish: [[karitsa]]
 *French: [[agneau]] ''m''
-*German: [[Lamm]] ''n''
+*German: [[Lamm]] ''n'' [[:de:Lamm|(de)]]
 *{{hu}}: [[:hu:bárány|bárány]]
 *Italian: [[agnello]] ''m'', (''baby lamb'') [[agnellino]] ''m'' (1)
 |}
