--- a/wiki/lamb.wikitext
+++ b/wiki/lamb.wikitext
@@ -13,6 +13,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Catalan [1,2] [[xai]] ''m'' [[:ca:xai|(ca)]], [[anyell]] ''m, lit.'' [[:ca:anyell|(ca)]]
 *Czech:  [[jehně]] ''n''
 *Dutch: [[lam]] ''n'', [[lammetje]] ''n'', [[lamsvlees]] ''n''
 *Finnish: [[karitsa]]
@@ -27,6 +28,7 @@
 *Latin: [[agnus]] ''m''
 *Polish: [[jagnię]] ''n''
 *[[Romanica]]: [[agno]] ''m''
+*Spanish: [1] [[cordero]] ''m'' [[:es:cordero|(es)]]
 *Swedish: [[lamm]] ''c''
 |}
 |}
