--- a/wiki/battle.wikitext
+++ b/wiki/battle.wikitext
@@ -24,6 +24,7 @@ IPA: [[WEAE]] /ˈbæ.tl/
 *Slovak: [[bitka]] ''f'' (1), [[boj]] ''m'' (2)
 *Dutch: [[gevecht]] ''n'' (1), [[strijd]] ''f'' (1,2)
 *Portuguese:  [[batalha]] "f"
+*Italian: [[battaglia]] "f"
 
 ====Synonyms====
 [[Conflict]]; [[encounter]]; [[contest]]; [[action]].
