/* Noun */ +and input <determinism#66755>

--- a/wiki/determinism.wikitext
+++ b/wiki/determinism.wikitext
@@ -4,7 +4,7 @@
 '''determinism'''
 
 # (''philosophy'') The doctrine that all actions are determined by the current state and immutable laws of the universe, with no possibility of choice.
-# (''computing'') The property of having behavior determined only by initial state.
+# (''computing'') The property of having behavior determined only by initial state and input.
 
 ===Related Terms===
 *[[deterministic]]
