+angelic non-determinism <non-determinism#66756>

--- a/wiki/non-determinism.wikitext
+++ b/wiki/non-determinism.wikitext
@@ -7,5 +7,6 @@
 #: ''Moving from a single-processor to multi-processor system often exposes hidden non-determinism due to invalid assumptions about scheduling.''
 
 ===Related Terms===
+*[[angelic non-determinism]]
 *[[determinism]]
 *[[non-deterministic]]
