--- a/wiki/Maharashtra.wikitext
+++ b/wiki/Maharashtra.wikitext
@@ -7,7 +7,11 @@ combining form of [[महत्]] (mahat) "great" + [[राष्ट्र]] (
 #State in western [[India]] which has [[Mumbai]] (formerly known as [[Bombay]]) as its capital.
 
 ====Translations====
+({{nl}}: ''Maharashtra''
 *German: ''Maharashtra''
 *Hindi: [[महाराष्ट्र]] (mahārāṣṭra)
 *Japanese: [[マハラシュトラ州]] (maharashutora-shou)
 *Swedish: ''Maharashtra''
+
+
+[[nl:Maharashtra]]
