--- a/wiki/dangerous.wikitext
+++ b/wiki/dangerous.wikitext
@@ -29,3 +29,4 @@
 *Russian: [[опасный]] ''m'', [[опасная]] ''f'', [[опасное]] ''n''
 *Spanish: [[peligroso]] ''m'', [[peligrosa]] ''f''
 *Swedish: [[farlig]], [[farligt]]<!-- what's the difference?? -->
+*Norwegian: [[farlig]]
