/* English */ +2 defs <med#47509>

--- a/wiki/med.wikitext
+++ b/wiki/med.wikitext
@@ -7,14 +7,32 @@
 ----
 
 ==English==
-===Etymology===
+===Etymology 1===
 Short form of [[Mediterranean]].
 
-===Proper noun===
+====Proper noun====
 '''the Med'''
-#(''colloquial'') Short form of [[Mediterranean]]: ''We're going to the Med for four weeks this summer.''
+#(''colloquial'') [[Mediterranean]]: ''We're going to the Med for four weeks this summer.''
+
+===Etymology 2===
+Short form of medical
+
+====Adjective====
+'''med'''
+#(''informal'') [[medical]]
+
+===Etymology 3===
+Abbreviation
+
+====Abbreviation====
+'''MEd'''
+#Master of Education
+
+====See also====
+*[[w:British_degree_abbreviations|Wikipedia article on British degree abbreviations]]
 
 ----
+
 ==Slovak==
 ===Noun===
 :'''med''' ''m'', '''medy''' ''pl''
