--- a/wiki/Grundbegriff.wikitext
+++ b/wiki/Grundbegriff.wikitext
@@ -1,3 +1,3 @@
-1) From the German: A fundamental concept; 
-
-2) From the Technobabble: an internet forum member displaying in equal measure profound erudition and high-handed self-importance.
+\GRUHND-be-grif\, noun:
+1) (German), Fundamental concept; 
+2) (Technobabble), Internet discussion forum member or usenet participant displaying in equal measure profound erudition and high-handed self-importance.
