Re-work from Chameleon's input (thanks!) <working class#66734>

--- a/wiki/working_class.wikitext
+++ b/wiki/working_class.wikitext
@@ -1,13 +1,22 @@
 ==English==
+
 ===Noun===
 '''working class''' (''plural'' '''working classes''')
 
-#(''social class'') The working class is the social class of those who must work to live in capitalist society, as opposed to other classes which may include the professional or middle class (who work in a less hands-on fashion), the capitalist ruling class, the aristocratic upper class, or others depending the political analysis applied.  The term is often used according to cultural rather than strict socio-economic criteria.  It can be politically charged or neutral.  Similarly, it can be derogatory or neutral.
+# The [[social class]] of those who perform physical work for a living, as opposed to the professional or middle class, the upper class, or others.
 
 ===Adjective===
 '''working class''' ('''working-class''' before noun)
 
-#Relating to the working class, e.g. in terms of typical accent, outlook, etc.
+# Relating to the working class; suggestive of the working class in manner of speaking, outlook, appearance or other qualities.
 
-====Synonym====
-'''blue-collar'''
+====Synonyms====
+*[[blue-collar]]
+
+===Usage Note===
+The term ''working class'' is often used according to cultural rather than strict socio-economic criteria.  It can be politically charged or neutral.  Similarly, it can be derogatory or neutral.
+
+===See Also===
+*[[middle class]]
+*[[professional class]]
+*[[upper class]]
