--- a/wiki/exuberant.wikitext
+++ b/wiki/exuberant.wikitext
@@ -4,5 +4,5 @@
 '''exuberant'''
 #high-spirited
 
-===Quotations===
+====Quotations====
 *'''1961''': She was a tall, earthy, exuberant girl with long hair and a pretty face &mdash; ''Catch-22'', Joseph Heller
