def, quote <scold#42139>

--- a/wiki/scold.wikitext
+++ b/wiki/scold.wikitext
@@ -1,5 +1,11 @@
+==English==
+
 ===Verb===
 '''to scold''' ([[scolds]], [[scolded]], [[scolding]])
+#[[rebuke]]
+
+====Quotations====
+*'''1813''': A week elapsed before she could see Elizabeth without scolding her &mdash; ''Pride and Prejudice'', Jane Austen
 
 ====Translations====
 *Dutch: [[schelden]], [[berispen]]
