/* Verb */ no need to link to scolds, scolded, scolding <scold#42139>

--- a/wiki/scold.wikitext
+++ b/wiki/scold.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Verb===
-'''to scold''' ([[scolds]], [[scolded]], [[scolding]])
+'''to scold''' (scolds, scolded, scolding)
 #[[rebuke]]
 
 ====Quotations====
