--- a/wiki/scold.wikitext
+++ b/wiki/scold.wikitext
@@ -15,3 +15,11 @@
 *Portuguese: [[gritar]]
 *Russian: [[выбранить]] (vibranit'), [[ругать]] (rugat')
 *Spanish: [[reganar]], [[regañar]]
+
+===Noun===
+'''scold'''
+
+# (''dated'') A troublesome and angry woman.
+
+===Related Terms===
+*[[scold's bridle]]
