--- a/wiki/fare.wikitext
+++ b/wiki/fare.wikitext
@@ -11,6 +11,7 @@
 
 ===Translations===
 * Danish: [[billetpris]] ''c'' (1); [[kunde]] ''c'' (2); [[fortæring]] ''c'' (3)
+*Finnish: [[hinta]] (1), [[matkustaja]] (2), [[asiakas]] (2), [[ravinto]] (3)
 *French: [[prix]] ''m'', [[tarif]] ''m'' (1)
 
 ===Intransitive verb===
