--- a/wiki/mindblindness.wikitext
+++ b/wiki/mindblindness.wikitext
@@ -1,5 +1,9 @@
 =={{En}}==
 ===Noun===
 
+#The inability to deduct or make educated guesses about another person's mental state.
+
+source: Baron-Cohen, S. (1995). Mindblindness: An essay on autism and theory of mind. Cambridge: MIT Press.
+
 ====Related terms====
 *[[autism]]
