add information about egress/ingress prevention <claustration#66772>

--- a/wiki/claustration.wikitext
+++ b/wiki/claustration.wikitext
@@ -1,1 +1,1 @@
-Shutting up or enclosing.  Usually in a monastery or convent.  Derived from Latin "clostrum" = "lock" or "enclose"
+Shutting up or enclosing.  Usually in a monastery or convent.  Derived from Latin "clostrum" = "lock" or "enclose".  This relates to both the prevention of egress of those sworn to a religious order and prevention of ingress of those not sworn to obey the rules of a religious order.
