--- a/wiki/contempt_of_Congress.wikitext
+++ b/wiki/contempt_of_Congress.wikitext
@@ -2,7 +2,7 @@ In the [[federal]] [[law]] of the [[United States]], '''contempt of Congress''' 
 
 [[U.S. Congress|Congress]] generally brings this action for refusing to testify before a [[Congressional committee]], or failing to provide a committee with requested documents.  There have also been contempt cases based on bribing a [[U.S. Senator|Senator]] or [[U.S. Representative|Representative]].
 
-In order to be convicted of contempt of Congress, the congressional committee subject to the contempt first reports a resolution that the affected individual is guilty of contempt.  This takes a majority vote of the committee.  The full [[U.S. House of Representatives|House]] or [[U.S. Senate|Senate]] then must approve the resolution, which sends the matter to a federal attorney, who may call a [[grand jury]] to decide whether to [[indict]] the affected individual, and [[prosecute]] if the grand jury affirms an indictment.  This version of the procedure was put into place in [[1857]] and exists in order to provide a balance of power so the House and Senate cannot run amok and jail all their political opponents with contempt charges.  The Congress is also restricted in that contempt citations can only be brought on matters that relate to legislative purposes within the jurisdiction of the committee that brings the charges.
+In order to be convicted of contempt of Congress, the congressional committee subject to the contempt first reports a resolution that the affected individual is guilty of contempt.  This takes a majority vote of the committee.  The full [[U.S. House of Representatives|House]] or [[United States Senate|Senate]] then must approve the resolution, which sends the matter to a federal attorney, who may call a [[grand jury]] to decide whether to [[indict]] the affected individual, and [[prosecute]] if the grand jury affirms an indictment.  This version of the procedure was put into place in [[1857]] and exists in order to provide a balance of power so the House and Senate cannot run amok and jail all their political opponents with contempt charges.  The Congress is also restricted in that contempt citations can only be brought on matters that relate to legislative purposes within the jurisdiction of the committee that brings the charges.
 
 From time to time, Congress lodges contempt of Congress charges against members of the U.S. government, usually members of the [[executive branch]] who claim that releasing their records to a committee would cause more harm than good, or sometimes that the records are protected by [[executive privilege]] and must remain secret.  This can put the executive branch in an unusual ethical position, since the executive branch employs the U.S. Attorney, who decides whether to bring cases of contempt of Congress to the grand jury.  In addition, it is often the U.S. Attorney who advises executive branch members in the first place whether to withhold controversial documents or provide them to the congressional committees.
 
