--- a/wiki/cabbage.wikitext
+++ b/wiki/cabbage.wikitext
@@ -24,6 +24,7 @@
 *Italian: [[cavolo]] ''m'' (2)
 *Japanese: [[キャベツ]]
 *Portuguese: [[repolho]] ''m'' (2)
+*Russian: [[капуста|капу́ста]] /kapusta/ ''f'' (1, 2)
 *Slovak: [[kapusta#Slovak|kapusta]] ''f'' (1, 2)
 *Spanish: [[col]] ''f'' (2)
 
