--- a/wiki/sean.wikitext
+++ b/wiki/sean.wikitext
@@ -1,5 +1,7 @@
-Proper noun. Male's name. Originates from the Irish name Owen.
+===Proper noun===
 
-See also:
-[[Shaun]],
-[[Shawn]]
+# Male given name. Originates from the Irish name Owen.
+
+===See also===
+*[[Shaun]]
+*[[Shawn]]
