--- a/wiki/auto.wikitext
+++ b/wiki/auto.wikitext
@@ -6,10 +6,10 @@ Ancient Greek [[αὐτός]] "self", [[metanalyze]]d from [[auto-]] in words su
 {| border=1 cellpadding=5
 ! !! ''General American'' !! ''Received Pronunciation''
 |-
-| [[w:IPA|IPA]] || /ˈɑdo/ || /ˈ/
+| [[w:IPA|IPA]] || /ˈɑdo/ || /ˈoːtəʊ/
 |-
-| [[w:SAMPA|SAMPA]] || /"Ado/ || /"/
-|} 
+| [[w:SAMPA|SAMPA]] || /"Ado/ || /"o:t@U/
+|}
 
 ===Noun===
 '''auto'''
