--- a/wiki/%D0%B3%D0%BB%D0%B0%D1%81%D0%BD%D0%BE%D1%81%D1%82%D1%8C.wikitext
+++ b/wiki/%D0%B3%D0%BB%D0%B0%D1%81%D0%BD%D0%BE%D1%81%D1%82%D1%8C.wikitext
@@ -2,7 +2,8 @@
 ===Noun===
 '''гласность''' (glasnost')
 
-# {{substub}}
+# Publicity, Openness
+# Soviet policy of the 1980s. Mikhail Gorbachev began to promote a policy of openness in public discussions about current and historical problems. The policy was termed glasnost [publicity or openness]. This would then be coupled with [[perestroika]].
 
 ====Translations====
 *English: [[glasnost]]
