--- a/wiki/metrosexu%C3%A1l.wikitext
+++ b/wiki/metrosexu%C3%A1l.wikitext
@@ -1,1 +1,5 @@
-I like big butts and I cannot lie, you other brotheres can't deny, when a girl walks in with an itty bitty waist and that round thing in your face you get sprung.
+Like [[metrosexual]], but more french sounding.
+
+
+----
+Note: The previous entry made no sense whatsoever.
