--- a/wiki/fop.wikitext
+++ b/wiki/fop.wikitext
@@ -1,9 +1,8 @@
 ==English==
 ===Noun===
 '''fop''' (plural: [[fops]])
-# {{substub}}
-
-
+1. A feminine man.
+2. A type of pomade, used by a [[dandy]].
 ====Synonyms====
 *[[dandy]]
 *[[dude]], [[dood]]
