--- a/wiki/%E7%AB%B9.wikitext
+++ b/wiki/%E7%AB%B9.wikitext
@@ -18,7 +18,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,15 +30,48 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': juk1
 
+===Compounds===
+*[[竹板]]
+*[[竹板书]]
+*[[竹编]]
+*[[竹帛]]
+*[[竹材]]
+*[[竹床]]
+*[[竹雕]]
+*[[竹筏]]
+*[[竹竿]], [[竹竿儿]]
+*[[竹简]]
+*[[竹节]]
+*[[竹刻]]
+*[[竹篮]]
+*[[竹篮打水一场空]]
+*[[竹楼]]
+*[[竹马]], [[竹马儿]]
+*[[竹排]]
+*[[竹器]]
+*[[竹笋]]
+*[[竹筒倒豆子]]
+*[[竹叶青]]
+*[[竹纸]]
+*[[竹子]]
+*[[竹字头儿]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ちく]] (chiku)
 ** '''[[Kun]]''': [[たけ]] (take)
+
+===Compounds===
+*[[竹簡]]
+*[[竹馬]]
+*[[竹林]]
+*[[竹薮]]
+*[[竹刀]]
 
 * '''Other info''':  
 
