--- a/wiki/%E7%8C%B4.wikitext
+++ b/wiki/%E7%8C%B4.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#monkey, ape
+*# [[monkey]], [[ape]]
 *# monkey-like
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,22 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': hau4
 
+===Compounds===
+*[[猴急]]
+*[[猴筋儿]]
+*[[猴年马月]]
+*[[猴皮筋儿]]
+*[[猴拳]]
+*[[猴儿精]]
+*[[猴头菌]]
+*[[猴戏]]
+*[[猴子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こう]] (kō), [[ご]] (go)
