/* Noun */ spelling, +rel <fasciculus#66770>

--- a/wiki/fasciculus.wikitext
+++ b/wiki/fasciculus.wikitext
@@ -1,5 +1,9 @@
 ==English==
 ===Noun===
-'''fascicules''' (plural: [[fasciculi]])
+'''fasciculus''' (plural: [[fasciculi]])
 
-#A small bundle of [[nerve]], [[muscle]] or [[tendon]] fibers.
+# (''anatomy'') A small bundle of [[nerve]], [[muscle]] or [[tendon]] fibers.
+
+===Related Terms===
+*[[fascicle]]
+*[[fascism]]
