--- a/wiki/%E5%A5%B3.wikitext
+++ b/wiki/%E5%A5%B3.wikitext
@@ -1,4 +1,3 @@
-[[la:女]]
 * '''Alternate form''': [[女]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 38''': [[Wiktionary:Chinese radical index 女|女]]+0 stroke
@@ -18,10 +17,10 @@
 *# [[feminine]]
 *# rad. 38
 
-
+*:Antonym: [[男]]
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,15 +32,85 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': neui5
 
+===Compounds===
+*[[女伴]]
+*[[女扮男装]]
+*[[女宾]]
+*[[女傧相]]
+*[[女兵]]
+*[[女厕]]
+*[[女车]]
+*[[女大十八变]]
+*[[女低音]]
+*[[女儿]]
+*[[女儿酒]]
+*[[女儿墙]]
+*[[女方]]
+*[[女高音]]
+*[[女工]]
+*[[女红]]
+*[[女孩儿]]
+*[[女护士]]
+*[[女皇]]
+*[[女家]]
+*[[女监]]
+*[[女将]]
+*[[女眷]]
+*[[女郎]]
+*[[女里女气]]
+*[[女流]]
+*[[女朋友]]
+*[[女仆]]
+*[[女墙]]
+*[[女强人]]
+*[[女权]]
+*[[女权主义]]
+*[[女人]]
+*[[女色]]
+*[[女神]]
+*[[女生]]
+*[[女声]]
+*[[女士]]
+*[[女娲]]
+*[[女王]]
+*[[女巫]]
+*[[女性]]
+*[[女婿]]
+*[[女佣]]
+*[[女中音]]
+*[[女主角]]
+*[[女主人]]
+*[[女装]]
+*[[女子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[じょ]] (jo), [[にょ]] (nyo), [[にょう]] (nyō)
 ** '''[[Kun]]''': [[おんな]] (onna), [[め]] (me), [[むすめ]] (musume)
+
+===Compounds===
+*[[女医]]
+*[[女王]]
+*[[女傑]]
+*[[女子]]
+*[[女史]]
+*[[女児]]
+*[[女性]]
+*[[女中]]
+*[[女帝]]
+*[[女房]]
+*[[女流]]
+*[[女神]]
+*[[女郎花]]
+
+===See also===
+*[[め]]
+*[[メ]]
 
 * '''Other info''':  
 
@@ -72,3 +141,4 @@
 * '''Big5''':
 ** Hex: A46B
 ** Decimal: 42091
+[[la:女]]
