--- a/wiki/rotten.wikitext
+++ b/wiki/rotten.wikitext
@@ -1,15 +1,15 @@
-===[[Adjective]]===
+==English==
+===Adjective===
 
 #Rancid perishable items that have been overridden with [[bacteria]] and other infectious agents.
 #Cruel or mean.
 
-===[[Translations]]===
-*[[Dutch]]: [[rot]] (1), [[verrot]] (1), [[gemeen]] (2)
+===Translations===
+*Dutch: [[rot]] (1), [[verrot]] (1), [[gemeen]] (2)
 
 ----
 
-==[[Dutch]]==
-
-===[[Verb]]===
+==Dutch==
+===Verb===
 
 # to [[rot]], to go [[bad]], to [[decay]]
