--- a/wiki/toff.wikitext
+++ b/wiki/toff.wikitext
@@ -1,7 +1,7 @@
-n.
+==English==
+===Noun===
+'''toff'''
 
-An "elegantly dressed person".
+#An "elegantly dressed person".
 
-Commonly used by middle and lower classes in the UK to refer to the upper class with a negative connotation.
-
-(No, I don't know how to create wictionary pages)
+:Commonly used by middle and lower classes in the UK to refer to the upper class with a negative connotation.
