--- a/wiki/bue.wikitext
+++ b/wiki/bue.wikitext
@@ -3,3 +3,12 @@
 '''bue''' ''m'' (''plural'' [[buoi]])
 
 #[[ox]] (''bovine'')
+
+===See also===
+*[[bisonte]]
+*[[bufalo]]
+*[[manzo]]
+*[[mucca]]
+*[[toro]]
+*[[vacca]]
+*[[vitello]]
