--- a/wiki/collar.wikitext
+++ b/wiki/collar.wikitext
@@ -7,7 +7,50 @@
 # any encirling device or structure similar to (1)
 # any job designation, based on how the work is done, what demographic group usually does it, and where it is done, e.g. [[blue-collar]] and [[white-collar]].
 
-=== Translations ===
+====Translations====
+'''part of a shirt around throat'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[kaulus]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+'''any similar device or structure'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[kaulapanta]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+'''job designation based on how the work is done'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[kaulus]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+'''Translations to be checked'''
 *[[Dutch]]: [[kraag]] ''m''
 *[[French]]: [[col]] ''m''
 *[[Indonesian]]: [[kerah]], [[krah]]
@@ -20,5 +63,21 @@
 #to catch, catch up with
 #:''I managed to collar Fred in the office yesterday''
 
-=== Related words ===
+====Translations====
+'''to catch up'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[ottaa]] [[kiinni]], [[napata]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+====Related words====
 [[blue collar]], [[white collar]], [[dog collar]], [[felt his collar]]
