--- a/wiki/%E5%BD%BC.wikitext
+++ b/wiki/%E5%BD%BC.wikitext
@@ -30,13 +30,17 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ひ]] (hi)
-** '''[[Kun]]''': [[かれ]] (kare), [[かの]] (kano)
+** '''[[Kun]]''': [[かれ]] (kare), [[かの]] (kano-)
 
-* '''Other info''':  [[かれ]] is used as either [[boyfriend]] or [[he]].  [[かの]] combined with [[女]] (じょ, jo) is used as [[girlfriend]] or [[she]].
+===Compounds===
+*[[彼岸]]
+*[[彼女]]
+
+* '''Other info''':  [[かれ]] is used as either [[boyfriend]] or (''rare'') [[he]].  [[かの]] combined with [[女]] (じょ, jo) is used as [[girlfriend]] or (''rare'') [[she]].
 
 ----
 
