--- a/wiki/spaghetti.wikitext
+++ b/wiki/spaghetti.wikitext
@@ -124,7 +124,7 @@ The translations below need to be checked by native speakers and inserted into t
 ----
 ==French==
 ===Etymology===
-Italian (''see English etymology above'')
+Italian (''see Italian etymology below'')
 
 ===Noun===
 '''spaghetti''' ''m''
