--- a/wiki/shovel.wikitext
+++ b/wiki/shovel.wikitext
@@ -7,16 +7,16 @@
 *[[steamshovel]]
 
 ====Translations====
-*[[Chinese]]: [[鐵鍬]], [[铁锹]]
+*Chinese: [[鐵鍬]], [[铁锹]]
 *[[Dutch]]: [[schop]] ''f''
 *[[Finnish]]: [[lapio]]
-*[[French]]: [[pelle]] ''f''
-*[[German]]: [[Schaufel]] ''f''
+*French: [[pelle]] ''f''
+*German: [[Schaufel]] ''f''
 *[[Greek]]: [[φτυάρι]] ''n''
-*[[Italian]]: [[pala]] ''f''
-*[[Japanese]]: [[シャベル]]
-*[[Slovak]]: [[lopata]] ''f''
-*[[Spanish]]: [[pala]] ''f''
+*Italian: [[pala]] ''f''
+*Japanese: [[ショベル]]
+*Slovak: [[lopata]] ''f''
+*Spanish: [[pala]] ''f''
 
 ===Verb===
 '''to shovel''' ([[shovels]], [[shoveled]], [[shoveling]])
