--- a/wiki/shovel.wikitext
+++ b/wiki/shovel.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Noun===
 '''shovel''' ([[shovels]])
 
@@ -7,26 +8,29 @@
 *[[steamshovel]]
 
 ====Translations====
-*Chinese: [[鐵鍬]], [[铁锹]]
-*[[Dutch]]: [[schop]] ''f''
-*[[Finnish]]: [[lapio]]
+*Chinese: [[鐵鍬]] / [[铁锹]]
+*Dutch: [[schop]] ''f''
+*Finnish: [[lapio]]
 *French: [[pelle]] ''f''
 *German: [[Schaufel]] ''f''
-*[[Greek]]: [[φτυάρι]] ''n''
+*Greek: [[φτυάρι]] ''n''
 *Italian: [[pala]] ''f''
 *Japanese: [[ショベル]]
 *Slovak: [[lopata]] ''f''
 *Spanish: [[pala]] ''f''
 
 ===Verb===
-'''to shovel''' ([[shovels]], [[shoveled]], [[shoveling]])
+'''to shovel''' ([[shovels]], [[shovelled]], [[shovelling]])
 
 # to move materials with a shovel
 
 ====Translations====
-*[[Dutch]]: [[scheppen]]
-*[[Finnish]]: [[lapioida]]
-*[[French]]: [[peller]]
-*[[German]]: [[schaufeln]]
-*[[Italian]]: [[spalare]]
-*[[Spanish]]: [[traspalar]]
+*Dutch: [[scheppen]]
+*Finnish: [[lapioida]]
+*French: [[peller]]
+*German: [[schaufeln]]
+*Italian: [[spalare]]
+*Spanish: [[traspalar]]
+
+===Related terms===
+*[[shove]]
