--- a/wiki/%E7%9E%8E.wikitext
+++ b/wiki/%E7%9E%8E.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#blind, reckless
-*# rash
+*# [[blind]], [[reckless]]
+*# [[rash]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,35 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': hat6
 
+===Compounds===
+*[[瞎掰]]
+*[[瞎编]]
+*[[瞎猜]]
+*[[瞎扯]]
+*[[瞎吹]]
+*[[瞎话]]
+*[[瞎混]]
+*[[瞎火]]
+*[[瞎聊]]
+*[[瞎忙]]
+*[[瞎猫碰见死耗子]]
+*[[瞎蒙]]
+*[[瞎闹]]
+*[[瞎弄]]
+*[[瞎跑]]
+*[[瞎炮]]
+*[[瞎说]]
+*[[瞎眼]]
+*[[瞎咋呼]]
+*[[瞎诌]]
+*[[瞎抓]]
+*[[瞎子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かつ]] (katsu)
