--- a/wiki/mongol.wikitext
+++ b/wiki/mongol.wikitext
@@ -4,3 +4,24 @@
 
 #A person from [[Mongolia]]. <!-- Is this the usual form, rather than "Mongolian"? -->
 <!-- Is the Down's syndrome sense a noun or an adjective, and is it capitalised? -->
+
+----
+
+==French==
+===Adjective===
+'''mongol'''
+
+# [[Mongolian]]
+
+===Noun===
+'''Mongol''' ''m'', '''[[Mongole]]''' ''f''
+
+# A person from Mongolia.
+
+===Noun===
+'''Mongol''' ''m''
+
+# [[Mongolian]] language
+
+===Related terms===
+*[[Mongolie]]
